tests/compile_errors/002-missing-return.buzz
import "lib/std.buzz";

fun missingReturn() > str {
    | For now we don't try to evaluate expressions at compile time
    if (true) {
        return "hello";
    } else if (true) {
        return "hello";
    }
}

fun returnInElse() > str {
    if (true) {
        return "hello";
    } else {
        return "bye";
    }
}

test "Missing return statement" {
    returnInElse();
    missingReturn();
}